# agent-definitions

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  GITHUB_ACTIONS_BILLING_RESOLUTION.md  README.md  manual-docker-build.sh  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: sync.yaml
agents/claude-coder-1/: config.yaml  system-prompt.md
agents/devops-agent/: config.yaml  system-prompt.md
agents/pirate-captain-agent/: config.yaml  system-prompt.md
agents/research-agent/: config.yaml  system-prompt.md
agents/sprint-coder/: config.yaml  system-prompt.md
agents/test-persona-agent/: config.yaml  system-prompt.md
docs/: AGENT_CREATION.md  agent-config-schema-approaches.md  runner-compatibility-analysis.md  test-persona-validation-report.md
docs/adr/: 014-agent-registry.md  030-orchestration-types.md
docs/notes/: bead-ad-2b3-status.md  config-schema.md  creating-agents.md  skills.md
docs/research/: schema-compatibility-approaches.md
research/: ad-k5y-schema-validation-approaches.md
schemas/: agent-config.schema.json  skill.schema.json
scripts/: register_agents.py  sync_assets.py  sync_to_r2.py  validate-runner-compat.py  validate.py
skills/budget-check/: SKILL.md
skills/hub-post/: SKILL.md
skills/hub-search/: SKILL.md
templates/code-specialist/: config.template.yaml  system-prompt.template.md
templates/media-generator/: config.template.yaml  system-prompt.template.md
templates/researcher/: config.template.yaml  system-prompt.template.md
tests/: __init__.py  test_register_agents.py  test_runner_compatibility.py  test_sync_assets.py  test_sync_to_r2.py  test_validate.py
